--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,10 @@ Authors@R:
            role = c("aut", "cre"),
            email = "zliao2@uw.edu",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: A class project package
+Description: A class project package.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
 Suggests: 
-    testthat
+    testthat (>= 2.1.0)
